- Slides are now positioned absolutely (to fix a MathJax glitch that shifts the content down several pixels)

--- a/css/slides.sass
+++ b/css/slides.sass
@@ -20,14 +20,10 @@ body
   background: #CCC
   //overflow: hidden
 
-  & > *
-    height: 0
-    padding: 0
-
 section
   width: var(--width)
   height: var(--height)
-  position: relative
+  position: absolute
 
 a.prev_flat_link
   position: absolute
